# jm

./: .gitignore  LICENSE  README.md  RELEASES.md
design/: async_programming.nx  design.nx  memory_management.nx  types.nx  webapp.nx
nextc/: __init__.py  __main__.py  pyproject.toml
nextc/ast/: __init__.py
nextc/compile/: __init__.py
nextc/lexing/: __init__.py
nextc/parse/: __init__.py
nextc/src/nextc/: __init__.py  __main__.py
nextc/src/nextc/ast/: __init__.py
nextc/src/nextc/compile/: __init__.py  core.py  declarations.py
nextc/src/nextc/lexing/: __init__.py  errors.py  token.py  tokenizer.py
nextc/src/nextc/parse/: __init__.py
nextup/: pyproject.toml
nextup/src/nextup/: __main__.py
parcel/: pyproject.toml
parcel/src/parcel/: __main__.py
sketches/: types.nx  using_modules.nx
