[tool.poetry]
name = "parcel"
version = "0.1.0"
description = "Package Manager for the Next Programming Language"
authors = ["VincentRPS"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
click = "^8.1.3"
nextc = "^0.1"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = 'black'

[tool.black]
target-version = ['py310']
skip-string-normalization = true
